UPDATING related work

--- a/main.tex
+++ b/main.tex
@@ -97,55 +97,39 @@
 %    giang.nguyen@tu-dresden.de}
 % }
 
-\author{
-    \IEEEauthorblockN{Hatem Ismail\IEEEauthorrefmark{1}, Stefanie Roos\IEEEauthorrefmark{2}, Giang Nguyen\IEEEauthorrefmark{3}, Neeraj Suri\IEEEauthorrefmark{1}}
-    \IEEEauthorblockA{\IEEEauthorrefmark{1}DEEDS Group, TU Darmstadt
-    \\\{hayman, suri\}@deeds.informatik.tu-darmstadt.de}
-    \IEEEauthorblockA{\IEEEauthorrefmark{2}University of Waterloo
-    \\stefanie.roos@uwaterloo.ca}
-      \IEEEauthorblockA{\IEEEauthorrefmark{3}TU Dresden
-   \\giang.nguyen@tu-dresden.de}
-}
+% \author{
+%     \IEEEauthorblockN{Hatem Ismail\IEEEauthorrefmark{1}, Stefanie Roos\IEEEauthorrefmark{2}, Neeraj Suri\IEEEauthorrefmark{1}}
+%     \IEEEauthorblockA{\IEEEauthorrefmark{1}DEEDS Group, TU Darmstadt
+%     \\\{hayman, suri\}@deeds.informatik.tu-darmstadt.de}
+%     \IEEEauthorblockA{\IEEEauthorrefmark{2}University of Waterloo
+%     \\stefanie.roos@uwaterloo.ca}
+% }
 
-% \author{Hatem Ismail}
-% \email{email1@email.com}
-% \affiliation{hayman@deeds.informatik.tu-darmstadt.de}
-% 
-% \author{Stefanie Roos}
-% \email{email2@email.com}
-% \affiliation{University name3, Department name, Address}
-% 
-% \author{Giang Nguyen}
-% \email{email3@email.com}
-% \affiliation{University name2, Department name, Address}
-% 
-% \author{Neeraj Suri}
-% \email{email3@email.com}
-% \affiliation{University name2, Department name, Address}
 
-% \author{\IEEEauthorblockN{Hatem Ismail}
-% \IEEEauthorblockA{DEEDS Group, TU Darmstadt\\
-% % Darmstadt, Germany\\
-% hayman@deeds.informatik.tu-darmstadt.de}
-% 
-% \and
-% \IEEEauthorblockN{Stefanie Roos}
-% \IEEEauthorblockA{University of Waterloo \\
-% % Waterloo, Canada\\
-% stefanie.roos@uwaterloo.ca}
-% 
+
+\author{\IEEEauthorblockN{Hatem Ismail}
+\IEEEauthorblockA{DEEDS Group, TU Darmstadt\\
+% Darmstadt, Germany\\
+hayman@deeds.informatik.tu-darmstadt.de}
+
+\and
+\IEEEauthorblockN{Stefanie Roos}
+\IEEEauthorblockA{University of Waterloo \\
+% Waterloo, Canada\\
+stefanie.roos@uwaterloo.ca}
+
 % \and
 % \IEEEauthorblockN{Giang Nguyen}
 % \IEEEauthorblockA{TU Dresden\\
 % % Darmstadt, Germany\\
 % giang.nguyen@tu-dresden.de}
-% 
-% \and
-% \IEEEauthorblockN{Neeraj Suri}
-% \IEEEauthorblockA{DEEDS Group, TU Darmstadt\\
-% % Darmstadt, Germany\\
-% suri@cs.tu-darmstadt.de}
-% }
+
+\and
+\IEEEauthorblockN{Neeraj Suri}
+\IEEEauthorblockA{DEEDS Group, TU Darmstadt\\
+% Darmstadt, Germany\\
+suri@cs.tu-darmstadt.de}
+}
 
 
 % make the title area
