--- a/ref.bib
+++ b/ref.bib
@@ -24,7 +24,7 @@ title = {{RBCS: A resilient Backbone Construction Scheme for Hybrid Peer-To-Peer
 author={{Nguyen, G. et al.}},
 booktitle={{Proc. LCN}},
 year = {2015},
-pages = {261-269}
+pages = {261--269}
 }
 @inproceedings{neighborlist1,
  author = {{Huang, Y. et al.}},
@@ -37,7 +37,58 @@ pages = {261-269}
  author = {{Vu, L. et al.}},
  title = {{Measurement and Modeling of a Large-scale Overlay for Multimedia Streaming}},
  booktitle = {{Proc. QSHINE}},
- series = {QSHINE '07},
  year = {2007},
  pages = {3:1--3:7}
- } 
+ }
+@inproceedings{defending, 
+author={{D. Li. et al.}}, 
+booktitle={{IEEE Trans. Multimedia}}, 
+title={{Defending Against Buffer Map Cheating in DONet-Like P2P Streaming}}, 
+year={{2009}}, 
+volume={11}, 
+pages={535--542}
+}
+@inproceedings{pollution1, 
+author={{I. Gkortsilas and K. Deltouzos}}, 
+booktitle={{Proc. EuCNC}}, 
+title={{Detecting and Isolating Pollution Attacks in Peer-to-peer VoD Systems}}, 
+year={2016}, 
+pages={340--344}
+}
+@article{pollution2,
+  title={{A Trust-based Pollution Attack Prevention Scheme in Peer-to-peer Streaming Networks}},
+  author={{Kang, X. and Wu, Y.}},
+  journal={{Computer Networks}},
+  volume={72},
+  pages={62--73},
+  year={2014}
+}
+@inproceedings{defending2,
+  title={Incentive Mechanism for Peer-to-peer Media Streaming},
+  author={{Habib, A. and Chuang, J.}},
+  booktitle={{Proc. IWQOS}},
+  pages={171--180},
+  year={2004}
+}
+@article{nc,
+  title={{Simple countermeasures to mitigate the effect of pollution attack in network coding-based peer-to-peer live streaming}},
+  author={{Fiandrotti, A. et al.}},
+  journal={{IEEE Transactions on Multimedia}},
+  volume={17},
+  pages={562--573},
+  year={2015}
+}
+@inproceedings{antiliar,
+  title={{Antiliar: Defending Against Cheating Attacks in Mesh Based Streaming}},
+  author={{So, K. and Reeves, S.}},
+  booktitle={{Proc. P2P}},
+  pages={{115--125}},
+  year={2012}
+}
+@inproceedings{nguyen2014resilience,
+  title={{On the Resilience of Pull-based p2p Streaming Systems Against DoS Attacks}},
+  author={{Nguyen, G. et al.}},
+  booktitle={{Proc. SSS}},
+  pages={{33--47}},
+  year={2014}
+}
