--- a/ref.bib
+++ b/ref.bib
@@ -92,3 +92,33 @@ pages={340--344}
   pages={{33--47}},
   year={2014}
 }
+@article{zhang2014modeling,
+  title={{Modeling and Performance Analysis of Pull-based Live Streaming Schemes in Peer-to-Peer Network}},
+  author={{Zhang, Jianwei and Xing, Wei and Wang, Yongchao and Lu, Dongming}},
+  journal={{Computer Communications}},
+  volume={40},
+  pages={{22--32}},
+  year={{2014}}
+}
+@article{sasi2014survey,
+  title={{A Survey on Peer to Peer Video Streaming Systems}},
+  author={{Sasi, Lekshmy A and Madhavu, Minu Lalitha}},
+  journal={{IJRECE}},
+  volume={3},
+  year={2014}
+}
+@inproceedings{cheatingAnalysis,
+ author = {{Cui, Y. et al.}},
+ title = {{Impact of Buffer Map Cheating on the Streaming Quality in DONet}},
+ booktitle = {{Proc. ICCS}},
+ year = {2007},
+ pages = {817--824},
+} 
+@ARTICLE{4395124, 
+author={{Xiaojun, H. et al.}}, 
+journal={{J-SAC}}, 
+title={{Inferring Network-Wide Quality in P2P Live Streaming Systems}}, 
+year={2007}, 
+volume={25}, 
+pages={1640-1654}
+}
