--- a/analysis.tex
+++ b/analysis.tex
@@ -6,7 +6,7 @@
 %Due to the high flexibility of pull-based content distribution and the corresponding loose correlation between a node's position in the network and its satisfaction, 
 We focus on characterizing the behavior of malicious nodes aiming to subvert the detection mechanism to remove honest headnodes and retain malicious ones. 
 More precisely, we show that successfully accusing a benign headnode of manipulation requires that the malicious peer starting the complaint presents a neighbor list that is either dominated by malicious peers or contains benign peers with unusually low satisfaction levels. Similarly, preventing the removal of a malicious headnode requires that a high number of the complaint issuer's neighbors are malicious. 
-The exact conditions differ between \drop and \manp.
+The exact conditions differ between \drop and \block.
 
 
 
