--- a/macros.tex
+++ b/macros.tex
@@ -1,8 +1,8 @@
-\newcommand{\drop}{\textit{Drop}\xspace}
-\newcommand{\manp}{\textit{Manp}\xspace}
+\newcommand{\drop}{\textit{Drop-chunk}\xspace}
+\newcommand{\block}{\textit{$BM$-block}\xspace}
 \newcommand{\sat}{sat}
 \newcommand{\satThres}{\sigma}
-\newcommand{\manpThres}{\alpha}
+\newcommand{\blockThres}{\alpha}
 \newcommand{\guilt}{gu}
 \newcommand{\fami}{fam}
 \newcommand{\minP}{t_{drop}}
