--- a/abstract.tex
+++ b/abstract.tex
@@ -12,6 +12,6 @@ The proposed mechanism allows peers to collaboratively decide and thus, file a c
 
 % Simultaneously, peers locally sanitize their contact lists from peers who conduct adversarial $BM$ cheating behaviors.
 
-Through both a theoretical and a simulation-based analysis, we validate that the detection mechanism is able to correctly detect malicious peers with up to 90\% while inducing a small overhead of 8\%.
+Through both a theoretical and a simulation-based analysis, we validate that the detection mechanism is able to correctly detect malicious peers with up to 80-90\% while inducing a small overhead of ~8\%.
 
 \end{abstract}
