--- a/macros.tex
+++ b/macros.tex
@@ -8,3 +8,4 @@
 \newcommand{\minP}{t_{drop}}
 \newcommand{\minDR}{\kappa_{drop}}
 \newcommand{\minMR}{\kappa_{manp}}
+\newcommand{\treply}{t_{reply}}
